Upgrade to Gradle 9.2.0 (#186)